--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <!-- 
-        Fox.
+        Fox
         Hack the Planet 2015
     -->
     <head>
@@ -10,10 +10,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="Tim Hung">
-        <link rel="icon" href="images/favicon.ico">
-        <link href="main.css" rel="stylesheet">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+        <link rel="icon" href="graphics/favicon.ico">
+        <link href="styles/main.css" rel="stylesheet">
         <title>Fox</title>
     </head>
     <body>
+        <div id="banner">
+            <img id="banner-img" src="graphics/banner.png">
+            <div id="logo">
+                <img id="logo-img" src="graphics/logo.png">
+                <div id="logo-text">
+                    fox
+                </div>
+            </div>
+            <div id="banner-title" class="white">
+                THE FUTURE OF BITCOIN IS HERE
+            </div>
+        </div>
+
+        <div id="main-content">
+            <div id="main-content-title" class="gray">
+                Finally, an easy way to buy pretty <br> much everything with Bitcoin.
+            </div>
+            <div id="main-content-text" class="gray">
+                I'm a student at The Bronx High School of Science in New York City, and I've created several iOS apps and other small projects, all of which can be viewed on the "Portfolio" page of this site. Feel free to contact me if you have any questions.
+            </div>
+            <img src="graphics/phone.png" style="width:20%">
+        </div>
     </body>
 <html>
