Playing with responsiveness.

--- a/html/index.html
+++ b/html/index.html
@@ -20,23 +20,24 @@
             <img id="banner-img" src="graphics/banner.png">
             <div id="logo">
                 <img id="logo-img" src="graphics/logo.png">
-                <div id="logo-text">
-                    fox
-                </div>
             </div>
             <div id="banner-title" class="white">
                 THE FUTURE OF BITCOIN IS HERE
+<!--                <marquee scrollamount="50" behavior="alternate"></marquee>-->
             </div>
         </div>
-
         <div id="main-content">
             <div id="main-content-title" class="gray">
-                Finally, an easy way to buy pretty <br> much everything with Bitcoin.
+                Finally, an easy way to buy pretty much everything with Bitcoin.
             </div>
             <div id="main-content-text" class="gray">
                 I'm a student at The Bronx High School of Science in New York City, and I've created several iOS apps and other small projects, all of which can be viewed on the "Portfolio" page of this site. Feel free to contact me if you have any questions.
             </div>
-            <img src="graphics/phone.png" style="width:20%">
+            <img src="graphics/phone.png" style="width:20%; margin: 40px;">
+<!--            <div id="button">Call to Action</div>-->
+        </div>
+        <div id="footer">
+            THIS IS THE FOOTER BLAH BLAH 
         </div>
     </body>
 <html>
