Painfully implementing bootstrap

--- a/html/index.html
+++ b/html/index.html
@@ -13,30 +13,30 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link rel="icon" href="graphics/favicon.ico">
         <link href="styles/main.css" rel="stylesheet">
+        <link href="styles/bootstrap.min.css" rel="stylesheet">
         <title>Fox</title>
     </head>
     <body>
-        <div id="banner">
-            <img id="banner-img" src="graphics/banner.png">
+        <div id="banner" class="row wide">
             <div id="logo">
                 <img id="logo-img" src="graphics/logo.png">
             </div>
-            <div id="banner-title" class="white">
+            
+            <div id="banner-title" class="col-md-6 col-centered">
                 THE FUTURE OF BITCOIN IS HERE
-<!--                <marquee scrollamount="50" behavior="alternate"></marquee>-->
             </div>
         </div>
-        <div id="main-content">
-            <div id="main-content-title" class="gray">
+        <div id="main-content" class="row">
+            <div id="main-content-title" class="row col-md-offset-3 col-md-6 col-centered">
                 Finally, an easy way to buy pretty much everything with Bitcoin.
             </div>
-            <div id="main-content-text" class="gray">
-                I'm a student at The Bronx High School of Science in New York City, and I've created several iOS apps and other small projects, all of which can be viewed on the "Portfolio" page of this site. Feel free to contact me if you have any questions.
+            <div id="main-content-text" class="col-md-offset-2 col-md-8 col-centered">
+                I'd just like to interject for a moment. What you’re referring to as "the only real Dev language" is in fact, the Node.JS runtime environment or as I’ve recently taken to calling it, Node+JS. Node is not a language unto itself, but rather another free component of a fully functioning JavaScript runtime made useful by the JavaScript core syntax, parser utilities and vital language components comprising a full Dev language as defined by Alan Turing and his great descendant Steve Jobs.
             </div>
-            <img src="graphics/phone.png" style="width:20%; margin: 40px;">
+            <img id="phone-img" src="graphics/phone.png">
 <!--            <div id="button">Call to Action</div>-->
         </div>
-        <div id="footer">
+        <div id="footer" class="row">
             THIS IS THE FOOTER BLAH BLAH 
         </div>
     </body>
