--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <!-- 
-        Fox
+        fox
         Hack the Planet 2015
     -->
     <head>
@@ -27,17 +27,29 @@
             </div>
         </div>
         <div id="main-content" class="row">
-            <div id="main-content-title" class="row col-md-offset-3 col-md-6 col-centered">
+            <div id="main-content-title" class="col-md-offset-3 col-md-6 col-centered">
                 Finally, an easy way to buy pretty much everything with Bitcoin.
             </div>
             <div id="main-content-text" class="col-md-offset-2 col-md-8 col-centered">
                 I'd just like to interject for a moment. What you’re referring to as "the only real Dev language" is in fact, the Node.JS runtime environment or as I’ve recently taken to calling it, Node+JS. Node is not a language unto itself, but rather another free component of a fully functioning JavaScript runtime made useful by the JavaScript core syntax, parser utilities and vital language components comprising a full Dev language as defined by Alan Turing and his great descendant Steve Jobs.
             </div>
-            <img id="phone-img" src="graphics/phone.png">
-<!--            <div id="button">Call to Action</div>-->
+            <div class="col-md-offset-3 col-md-6">
+                <img id="phone-img" src="graphics/chart.png">
+            </div>
+<!--
+            <div style="background:yellow;" class="col-md-offset-2 col-md-3 col-centered">
+                <div id="button" >Call to Action</div>
+            </div>
+-->
         </div>
-        <div id="footer" class="row">
-            THIS IS THE FOOTER BLAH BLAH 
+        <div id="footer" class="row wide">
+            
+            <div style="display:inline-block;"> 
+                <img id="logo-img" style="display:inline-block;" src="graphics/logo.png">
+                <div style="display:inline-block; font-size: 24px; margin:40px;">Created at Hack the Planet 2015</div>
+                <img class="social-icon" style=" float:right;" src="graphics/GitHub.svg">
+            </div>
+            
         </div>
     </body>
 <html>
