--- a/html/index.html
+++ b/html/index.html
@@ -33,8 +33,8 @@
             <div id="main-content-text" class="col-md-offset-2 col-md-8 col-centered">
                 I'd just like to interject for a moment. What you’re referring to as "the only real Dev language" is in fact, the Node.JS runtime environment or as I’ve recently taken to calling it, Node+JS. Node is not a language unto itself, but rather another free component of a fully functioning JavaScript runtime made useful by the JavaScript core syntax, parser utilities and vital language components comprising a full Dev language as defined by Alan Turing and his great descendant Steve Jobs.
             </div>
-            <div class="col-md-offset-3 col-md-6">
-                <img id="phone-img" src="graphics/chart.png">
+            <div class="col-md-offset-2 col-md-8">
+                <img src="graphics/chart.png" id="phone-img">
             </div>
 <!--
             <div style="background:yellow;" class="col-md-offset-2 col-md-3 col-centered">
