Footer stuff, replaced lorem, readme changes.

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
         <link rel="icon" href="graphics/favicon.ico">
         <link href="styles/main.css" rel="stylesheet">
         <link href="styles/bootstrap.min.css" rel="stylesheet">
-        <title>Fox</title>
+        <title>fox</title>
     </head>
     <body>
         <div id="banner" class="row wide">
@@ -28,10 +28,10 @@
         </div>
         <div id="main-content" class="row">
             <div id="main-content-title" class="col-md-offset-3 col-md-6 col-centered">
-                Finally, an easy way to buy pretty much everything with Bitcoin.
+                Bitcoin made easy.
             </div>
             <div id="main-content-text" class="col-md-offset-2 col-md-8 col-centered">
-                I'd just like to interject for a moment. What you’re referring to as "the only real Dev language" is in fact, the Node.JS runtime environment or as I’ve recently taken to calling it, Node+JS. Node is not a language unto itself, but rather another free component of a fully functioning JavaScript runtime made useful by the JavaScript core syntax, parser utilities and vital language components comprising a full Dev language as defined by Alan Turing and his great descendant Steve Jobs.
+                <b>fox</b> is a free bitcoin wallet that lets you make effortless transactions with friends, family, and businesses. Easily track recent fluctuations in bitcoin value with beautiful graphs at your fingertips.
             </div>
             <div class="col-md-offset-2 col-md-8">
                 <img src="graphics/chart.png" id="phone-img">
@@ -43,11 +43,30 @@
 -->
         </div>
         <div id="footer" class="row wide">
-            
+<!--
             <div style="display:inline-block;"> 
-                <img id="logo-img" style="display:inline-block;" src="graphics/logo.png">
-                <div style="display:inline-block; font-size: 24px; margin:40px;">Created at Hack the Planet 2015</div>
-                <img class="social-icon" style=" float:right;" src="graphics/GitHub.svg">
+                <div id="logo"><img id="logo-img" style="display:inline-block;" src="graphics/logo.png"></div>
+                <h4 style="font-size: 24px; margin:40px;text-align:center">
+                    Created at Hack the Planet 2015
+                </h4>
+            </div>
+            <img class="social-icon" src="graphics/GitHub.svg">
+-->
+            <div class="row wide" style="color:white;text-align:left;">
+                <div class="col-md-2"></div>
+                <a class="col-md-2" href="https://github.com/wijagels/FoxWeb">Webpage Github</a>
+                <a class="col-md-2" href="https://github.com/jackcook/fox">Android Github</a>
+                <a class="col-md-2" href="http://devpost.com/software/foxweb-i6pcut">DevPost</a>
+                <div class="col-md-2"></div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row wide" style="color:gray;text-align:left;">
+                <div class="col-md-2"></div>
+                <div class="col-md-2">Made at Hack the Planet 2015</div>
+                <div class="col-md-2"></div>
+                <div class="col-md-2"></div>
+                <div class="col-md-2"></div>
+                <div class="col-md-2"></div>
             </div>
             
         </div>
