Some more text updates and transition fixes

--- a/html/index.html
+++ b/html/index.html
@@ -31,10 +31,12 @@
                 Bitcoin made easy.
             </div>
             <div id="main-content-text" class="col-md-offset-2 col-md-8 col-centered">
-                <b>fox</b> is a free bitcoin wallet that lets you make effortless transactions with friends, family, and businesses. Easily track recent fluctuations in bitcoin value with beautiful graphs at your fingertips.
+                <b>fox</b> is a free bitcoin wallet that lets you make effortless transactions with friends, family, and businesses. Easily track recent fluctuations in bitcoin value with beautiful graphs at your fingertips. Multi-language support in English, Swedish, French, Spanish, and Chinese.
             </div>
             <div class="col-md-offset-2 col-md-8">
-                <img src="graphics/chart.png" id="phone-img">
+                <a href="https://devpost.com/software/foxweb-i6pcut">
+                    <img src="graphics/chart.png" id="phone-img">
+                </a>
             </div>
 <!--
             <div style="background:yellow;" class="col-md-offset-2 col-md-3 col-centered">
